shorter request method names

--- a/README.pod
+++ b/README.pod
@@ -14,13 +14,13 @@ Mojo::WebService - Simple API client base class
    my ($self, $stuff) = @_;
    my $url = Mojo::URL->new('http://example.com')->query(stuff => $stuff);
    if ($cb) {
-     $self->ua_request(get => $url, sub {
+     $self->request(get => $url, sub {
        my ($self, $err, $res) = @_;
        return $self->$cb($err) if $err;
        $self->$cb(undef, $res->json);
      });
    } else {
-     return $self->ua_request(get => $url)->json;
+     return $self->request(get => $url)->json;
    }
  }
 
@@ -40,10 +40,10 @@ defaults to a L<Mojo::UserAgent> object.
 
 =head1 METHODS
 
-=head2 ua_request
+=head2 request
 
- my $res     = $webservice->ua_request($method => @args);
- $webservice = $webservice->ua_request($method => @args, sub {
+ my $res     = $webservice->request($method => @args);
+ $webservice = $webservice->request($method => @args, sub {
    my ($webservice, $err, $res) = @_;
  });
 
@@ -54,9 +54,9 @@ on connection or HTTP error. If a callback is passed, the request will be
 performed non-blocking, and the connection or HTTP error (if any) will instead
 be passed to the callback.
 
-=head2 ua_request_lenient
+=head2 request_lenient
 
-Run a HTTP request via L</"ua_request">, but HTTP errors will not throw an
+Run a HTTP request via L</"request">, but HTTP errors will not throw an
 exception or be returned in the callback. C<< $res->error >> can be used to
 check for HTTP errors manually, see L<Mojo::Message/"error">. Connection errors
 will still be reported normally.
