--- a/INSTALL
+++ b/INSTALL
@@ -1,23 +1,23 @@
-This is the Perl distribution Mojo-WebService.
+This is the Perl distribution Mojo-WebService-Twitter.
 
-Installing Mojo-WebService is straightforward.
+Installing Mojo-WebService-Twitter is straightforward.
 
 ## Installation with cpanm
 
 If you have cpanm, you only need one line:
 
-    % cpanm Mojo::WebService
+    % cpanm Mojo::WebService::Twitter
 
 If you are installing into a system-wide directory, you may need to pass the
 "-S" flag to cpanm, which uses sudo to install the module:
 
-    % cpanm -S Mojo::WebService
+    % cpanm -S Mojo::WebService::Twitter
 
 ## Installing with the CPAN shell
 
 Alternatively, if your CPAN shell is set up, you should just be able to do:
 
-    % cpan Mojo::WebService
+    % cpan Mojo::WebService::Twitter
 
 ## Manual installation
 
@@ -37,7 +37,7 @@ If you are installing into a system-wide directory, you may need to run:
 
 ## Documentation
 
-Mojo-WebService documentation is available as POD.
+Mojo-WebService-Twitter documentation is available as POD.
 You can run perldoc from a shell to read the documentation:
 
-    % perldoc Mojo::WebService
+    % perldoc Mojo::WebService::Twitter
