--- a/README.pod
+++ b/README.pod
@@ -51,7 +51,8 @@ defaults to a L<Mojo::UserAgent> object.
 
 =head1 METHODS
 
-L<Mojo::WebService::Twitter> implements the following methods.
+L<Mojo::WebService::Twitter> inherits all methods from L<Mojo::Base>, and
+implements the following new ones.
 
 =head2 get_tweet
 
