--- a/README.pod
+++ b/README.pod
@@ -7,6 +7,7 @@ Mojo::WebService::Twitter - Simple Twitter API client
 =head1 SYNOPSIS
 
  my $twitter = Mojo::WebService::Twitter->new(api_key => $api_key, api_secret => $api_secret);
+ $twitter->authorization($twitter->oauth2->get_bearer_token);
  
  # Blocking
  my $user = $twitter->get_user(screen_name => $name);
@@ -18,6 +19,10 @@ Mojo::WebService::Twitter - Simple Twitter API client
    say $err ? "Error: $err" : 'Tweet: ' . $tweet->text;
  });
  Mojo::IOLoop->start unless Mojo::IOLoop->is_running;
+ 
+ # Some requests require user-specific authentication
+ $twitter->authorization($twitter->oauth(access_token => $token, access_secret => $secret));
+ my $user = $twitter->verify_credentials;
 
 =head1 DESCRIPTION
 
@@ -25,6 +30,12 @@ L<Mojo::WebService::Twitter> is a L<Mojo::UserAgent> based
 L<Twitter|https://twitter.com> API client that can perform requests
 synchronously or asynchronously. An API key and secret for a
 L<Twitter Application|https://apps.twitter.com> are required.
+
+API requests are authorized by the L</"authorization"> object, which can either
+be a L<Mojo::WebService::Twitter::OAuth2> object to authorize requests on
+behalf of the application itself, or a more complex
+L<Mojo::WebService::Twitter::OAuth> object to authorize requests on behalf of a
+specific user.
 
 =head1 ATTRIBUTES
 
@@ -44,6 +55,14 @@ API key for your L<Twitter Application|https://apps.twitter.com>.
 
 API secret for your L<Twitter Application|https://apps.twitter.com>.
 
+=head2 authorization
+
+ my $auth = $twitter->authorization;
+ $twitter = $twitter->authorization($oauth);
+
+Object to authorize API requests, usually a L<Mojo::WebService::Twitter::OAuth>
+or L<Mojo::WebService::Twitter::OAuth2>.
+
 =head2 ua
 
  my $ua      = $webservice->ua;
@@ -56,6 +75,22 @@ defaults to a L<Mojo::UserAgent> object.
 
 L<Mojo::WebService::Twitter> inherits all methods from L<Mojo::Base>, and
 implements the following new ones.
+
+=head2 oauth
+
+ my $oauth = $twitter->oauth;
+ my $oauth = $twitter->oauth(access_token => $token, access_secret => $secret);
+
+Returns a new L<Mojo::WebService::Twitter::OAuth> object for authorizing with
+the Twitter API on behalf of a specific user.
+
+=head2 oauth2
+
+ my $oauth2 = $twitter->oauth2;
+ my $oauth2 = $twitter->oauth2(bearer_token => $token);
+
+Returns a new L<Mojo::WebService::Twitter::OAuth2> object for authorizing with
+the Twitter API on behalf of the application itself.
 
 =head2 get_tweet
 
@@ -145,13 +180,15 @@ filtering results with C<since_id> and C<max_id>.
 
 =back
 
-=head2 oauth
+=head2 verify_credentials
 
- my $oauth = $twitter->oauth;
- my $oauth = $twitter->oauth(access_token => $token, access_secret => $secret);
+ my $user = $twitter->verify_credentials;
+ $twitter->verify_credentials(sub {
+   my ($twitter, $error, $user) = @_;
+ });
 
-Returns a new L<Mojo::WebService::Twitter::OAuth> object for interacting with
-the Twitter API on behalf of a specific user.
+Verify the authorizing user's credentials and return a representative
+L<Mojo::WebService::Twitter::User> object. Requires OAuth 1.0a authorization.
 
 =head1 BUGS
 
