simplify authorization api

--- a/README.pod
+++ b/README.pod
@@ -7,7 +7,7 @@ Mojo::WebService::Twitter - Simple Twitter API client
 =head1 SYNOPSIS
 
  my $twitter = Mojo::WebService::Twitter->new(api_key => $api_key, api_secret => $api_secret);
- $twitter->authorization($twitter->oauth2->get_bearer_token);
+ $twitter->authorization->get_bearer_token;
  
  # Blocking
  my $user = $twitter->get_user(screen_name => $name);
@@ -21,7 +21,7 @@ Mojo::WebService::Twitter - Simple Twitter API client
  Mojo::IOLoop->start unless Mojo::IOLoop->is_running;
  
  # Some requests require user-specific authentication
- $twitter->authorization($twitter->oauth(access_token => $token, access_secret => $secret));
+ $twitter->authorization('oauth', access_token => $token, access_secret => $secret);
  my $user = $twitter->verify_credentials;
 
 =head1 DESCRIPTION
@@ -55,14 +55,6 @@ API key for your L<Twitter Application|https://apps.twitter.com>.
 
 API secret for your L<Twitter Application|https://apps.twitter.com>.
 
-=head2 authorization
-
- my $auth = $twitter->authorization;
- $twitter = $twitter->authorization($oauth);
-
-Object to authorize API requests, usually a L<Mojo::WebService::Twitter::OAuth>
-or L<Mojo::WebService::Twitter::OAuth2>.
-
 =head2 ua
 
  my $ua      = $webservice->ua;
@@ -76,21 +68,17 @@ defaults to a L<Mojo::UserAgent> object.
 L<Mojo::WebService::Twitter> inherits all methods from L<Mojo::Base>, and
 implements the following new ones.
 
-=head2 oauth
+=head2 authorization
 
- my $oauth = $twitter->oauth;
- my $oauth = $twitter->oauth(access_token => $token, access_secret => $secret);
+ my $oauth = $twitter->authorization;
+ $twitter  = $twitter->authorization($oauth);
+ $twitter  = $twitter->authorization('oauth2', bearer_token => $token);
+ $twitter  = $twitter->authorization('oauth', access_token => $token, access_secret => $secret);
 
-Returns a new L<Mojo::WebService::Twitter::OAuth> object for authorizing with
-the Twitter API on behalf of a specific user.
-
-=head2 oauth2
-
- my $oauth2 = $twitter->oauth2;
- my $oauth2 = $twitter->oauth2(bearer_token => $token);
-
-Returns a new L<Mojo::WebService::Twitter::OAuth2> object for authorizing with
-the Twitter API on behalf of the application itself.
+Get or set object used to authorize API requests. If the first argument is
+C<oauth>, a L<Mojo::WebService::Twitter::OAuth> object will be created. If the
+first argument is C<oauth2>, a L<Mojo::WebService::Twitter::OAuth2> object will
+be created. Defaults to OAuth 2.
 
 =head2 get_tweet
 
