--- a/README.pod
+++ b/README.pod
@@ -7,7 +7,7 @@ Mojo::WebService::Twitter - Simple Twitter API client
 =head1 SYNOPSIS
 
  my $twitter = Mojo::WebService::Twitter->new(api_key => $api_key, api_secret => $api_secret);
- $twitter->authorization($twitter->request_oauth2);
+ $twitter->authentication($twitter->request_oauth2);
  
  # Blocking
  my $user = $twitter->get_user(screen_name => $name);
@@ -20,8 +20,8 @@ Mojo::WebService::Twitter - Simple Twitter API client
  });
  Mojo::IOLoop->start unless Mojo::IOLoop->is_running;
  
- # Some requests require user-specific authentication
- $twitter->authorization('oauth', access_token => $token, access_secret => $secret);
+ # Some requests require authentication on behalf of a user
+ $twitter->authentication('oauth', token => $token, token_secret => $secret);
  my $authorizing_user = $twitter->verify_credentials;
 
 =head1 DESCRIPTION
@@ -31,11 +31,10 @@ L<Twitter|https://twitter.com> API client that can perform requests
 synchronously or asynchronously. An API key and secret for a
 L<Twitter Application|https://apps.twitter.com> are required.
 
-API requests are authorized by the L</"authorization"> object, which can either
-be a L<Mojo::WebService::Twitter::OAuth2> object to authorize requests on
-behalf of the application itself, or a more complex
-L<Mojo::WebService::Twitter::OAuth> object to authorize requests on behalf of a
-specific user.
+API requests are authenticated by the L</"authentication"> coderef, which can
+either use an OAuth 2.0 access token to authenticate requests on behalf of the
+application itself, or OAuth 1.0 credentials to authenticate requests on behalf
+of a specific user.
 
 =head1 ATTRIBUTES
 
@@ -68,56 +67,66 @@ defaults to a L<Mojo::UserAgent> object.
 L<Mojo::WebService::Twitter> inherits all methods from L<Mojo::Base>, and
 implements the following new ones.
 
-=head2 authorization
+=head2 authentication
 
- my $oauth = $twitter->authorization;
- $twitter  = $twitter->authorization($oauth);
- $twitter  = $twitter->authorization('oauth2', bearer_token => $token);
- $twitter  = $twitter->authorization('oauth', access_token => $token, access_secret => $secret);
+ my $code = $twitter->authentication;
+ $twitter = $twitter->authentication($code);
+ $twitter = $twitter->authentication({oauth_token => $access_token, oauth_token_secret => $access_token_secret});
+ $twitter = $twitter->authentication('oauth', token => $access_token, token_secret => $access_token_secret);
+ $twitter = $twitter->authentication({access_token => $access_token});
+ $twitter = $twitter->authentication('oauth2', token => $access_token);
 
-Get or set object used to authorize API requests. The authorizer can be set to
-C<oauth> to create a L<Mojo::WebService::Twitter::OAuth> object, C<oauth2> to
-create a L<Mojo::WebService::Twitter::OAuth2> object, or an authorizer object
-that has already been instantiated.
+Get or set coderef used to authenticate API requests. Passing C<oauth> with
+optional C<token> and C<token_secret>, or a hashref containing C<oauth_token>
+and C<oauth_token_secret>, will set a coderef which uses a L<WWW::OAuth> to
+authenticate requests. Passing C<oauth2> with required C<token> or a hashref
+containing C<access_token> will set a coderef which authenticates using the
+passed access token. The coderef will receive the L<Mojo::Message::Request>
+object as the first parameter, and an optional hashref of C<oauth_> parameters.
 
 =head2 request_oauth
 
- my $oreq = $twitter->request_oauth;
- my $oreq = $twitter->request_oauth($callback_url);
+ my $res = $twitter->request_oauth;
+ my $res = $twitter->request_oauth($callback_url);
  $twitter->request_oauth(sub {
-   my ($twitter, $error, $oreq) = @_;
+   my ($twitter, $error, $res) = @_;
  });
 
-Send an OAuth 1.0a authorization request and return a
-L<Mojo::WebService::Twitter::OAuthRequest> object representing the request. An
+Send an OAuth 1.0 authorization request and return a hashref containing
+C<oauth_token> and C<oauth_token_secret> (request token and secret). An
 optional OAuth callback URL may be passed; by default, C<oob> is passed to use
-PIN-based authorization. After authorization, the user will either be
-redirected to the callback URL with the query parameter C<oauth_verifier>, or
-receive a PIN to return to the application. Either the verifier string or PIN
-should be passed to L</"verify_oauth"> to retrieve a
-L<Mojo::WebService::Twitter::OAuth> to use for authorization.
+PIN-based authorization. The user should be directed to the authorization URL
+which can be retrieved by passing the request token to
+L<Mojo::WebService::Twitter::Util/"twitter_authorize_url">. After
+authorization, the user will either be redirected to the callback URL with the
+query parameter C<oauth_verifier>, or receive a PIN to return to the
+application. Either the verifier string or PIN should be passed to
+L</"verify_oauth"> to retrieve an access token and secret.
 
 =head2 verify_oauth
 
- my $oauth = $twitter->verify_oauth($oreq, $verifier);
- $twitter->verify_authorization($oreq, $verifier, sub {
-   my ($twitter, $error, $oauth) = @_;
+ my $res = $twitter->verify_oauth($verifier, $request_token, $request_token_secret);
+ $twitter->verify_oauth($verifier, $request_token, $request_token_secret, sub {
+   my ($twitter, $error, $res) = @_;
  });
 
-Verify an OAuth 1.0a authorization request, represented by a
-L<Mojo::WebService::Twitter::OAuthRequest> object, with the verifier string or
-PIN from the authorizing user. Returns a L<Mojo::WebService::Twitter::OAuth>
-object to use for L</"authorization"> on behalf of the user.
+Verify an OAuth 1.0 authorization request with the verifier string or PIN from
+the authorizing user, and the previously obtained request token and secret. The
+secret is cached by L</"request_oauth"> and may be omitted. Returns a hashref
+containing C<oauth_token> and C<oauth_token_secret> (access token and secret)
+which may be passed directly to L</"authentication"> to authenticate requests
+on behalf of the user.
 
 =head2 request_oauth2
 
- my $oauth2 = $twitter->request_oauth2;
+ my $res = $twitter->request_oauth2;
  $twitter->request_oauth2(sub {
-   my ($twitter, $error, $oauth2) = @_;
+   my ($twitter, $error, $res) = @_;
  });
 
-Request OAuth 2 credentials and return a L<Mojo::WebService::Twitter::OAuth2>
-object to use for L</"authorization"> on behalf of the application itself.
+Request OAuth 2 credentials and return a hashref containing an C<access_token>
+that can be passed directly to L</"authentication"> to authenticate requests on
+behalf of the application itself.
 
 =head2 get_tweet
 
@@ -215,7 +224,7 @@ filtering results with C<since_id> and C<max_id>.
  });
 
 Verify the authorizing user's credentials and return a representative
-L<Mojo::WebService::Twitter::User> object. Requires OAuth 1.0a authorization.
+L<Mojo::WebService::Twitter::User> object. Requires OAuth 1.0 authentication.
 
 =head1 BUGS
 
@@ -235,6 +244,6 @@ This is free software, licensed under:
 
 =head1 SEE ALSO
 
-L<Net::Twitter>
+L<Net::Twitter>, L<WWW::OAuth>
 
 =cut
