--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 {{$NEXT}}
+  - Use strict RFC 3986 URL encoding for parameters sent to twitter to match
+    signature generation. (#2)
 
 1.000     2018-08-04 17:40:55 EDT
   - INCOMPATIBLE CHANGE: Always retrieve extended tweets so the full text is
