--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Add get_user_timeline and get_user_timeline_p request methods.
 
 1.001     2020-03-09 18:32:29 EDT
   - Use strict RFC 3986 URL encoding for parameters sent to twitter to match
