--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Fix query parameter encoding for get_user_timeline as in other methods.
 
 1.002     2021-03-15 19:58:15 EDT
   - Add get_user_timeline and get_user_timeline_p request methods.
